[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvsep-cli"
version = "1.1.0"
description = "Command-line interface for MVSEP music separation API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MVSEP", email = "contact@mvsep.com"}
]
keywords = ["mvsep", "music", "separation", "audio", "vocals", "demucs", "audio-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
mvsep = "mvsep_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/mvsep/mvsep-cli"
Repository = "https://github.com/mvsep/mvsep-cli"
Documentation = "https://github.com/mvsep/mvsep-cli#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["mvsep_cli*"]

[tool.setuptools.package-data]
mvsep_cli = ["py.typed"]
